--- a/mwOOTD/index/index.html
+++ b/mwOOTD/index/index.html
@@ -25,14 +25,46 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" width="100"> </script>
 </head>
 
-<body>
-
-    <header><img src="image/logo/mwlogo.png" width="80px" class="logoimage">
+<body bgcolor="#f5f5f5">
 
 
-    </header>
+
+        <header>
+            <img src="image/logo/mwlogo.png" width="119px" class="logoimage">
+        </header>
 
 
-    <footer>푸터</footer>
 
+
+        <footer>
+
+            <table border="0" class="footer_menu_table">
+                <tr>
+                    <td><img src="image/icon/home2.png" width="30" class="menuicons">
+                    </td>
+                    <td><img src="image/icon/ootd.png" width="30" class="menuicons">
+                    </td>
+                    <td><img src="image/icon/closet.png" width="23" class="menuicons">
+                    </td>
+                    <td><img src="image/icon/market.png" width="30" class="menuicons">
+                    </td>
+                      <td><img src="image/icon/mypage2.png" width="23" class="menuicons">
+                    </td>               
+                </tr>
+                    <tr>
+                    <td>HOME
+                    </td>
+                    <td>OOTD
+                    </td>
+                    <td>CLOSET
+                    </td>
+                    <td>MARKET
+                    </td>
+                      <td>MY
+                    </td>               
+                </tr>
+            </table>
+
+        </footer>
+    
 </body></html>
