--- a/index/index.html
+++ b/index/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="default.css">
 
     <!--자바스크립트 불러오기-->
-    <script src="default.css"></script>
+    <script src="ootd.js"></script>
 
     <!--제이쿼리 라이브러리 로드-->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
         </header>
 
 
-
+	<div class="content" id="content" name="content"></div>
 
         <footer>
 
@@ -42,7 +42,7 @@
                 <tr>
                     <td><img src="image/icon/home2.png" width="30" class="menuicons">
                     </td>
-                    <td><img src="image/icon/ootd.png" width="30" class="menuicons">
+                    <td><img src="image/icon/ootd.png" width="30" class="menuicons" onclick="ootdMain()">
                     </td>
                     <td><img src="image/icon/closet.png" width="23" class="menuicons">
                     </td>
