--- a/index/index2.html
+++ b/index/index2.html
@@ -84,7 +84,7 @@
 
                             </form>
                         </div>
-                        <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button> <button type="button" class="btn btn-primary">등록</button> </div>
+                        <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button> <button type="button" class="btn btn-primary"  onclick="reg()">등록</button> </div>
                     </div>
                 </div>
             </div>
