--- a/index/index2.html
+++ b/index/index2.html
@@ -61,9 +61,9 @@
 
 
 
-                                <div class="form-group"> <label for="recipient-name" class="col-form-label">TODAY OOTD</label> <input type="file" id="ootd=photo">
+                                <div class="form-group"> <label for="recipient-name" class="col-form-label">TODAY OOTD</label> <input type="file" id="ootdphoto">
                                 </div>
-                                <div class="form-group"><input type="text" id="ootd_text" name="ootd_text"> </div>
+                                <div class="form-group"><input type="text" id="ootdtext" name="ootdtext"> </div>
                                 <div class="form-group">
 
                                     <div class="ootd_hs">
@@ -85,6 +85,7 @@
 
                             </form>
                         </div>
+                        
                         <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button> <button type="button" class="btn btn-primary" id="close_modal" onclick="reg()">등록</button> </div>
                     </div>
                 </div>
