--- a/index/index2.html
+++ b/index/index2.html
@@ -42,11 +42,11 @@
 
     <div class="content" id="content" name="content">
 
-        <h1>리스트출력 페이지 테스트</h1>
+  <!--      <h1>리스트출력 페이지 테스트</h1>
         <button type="button" class="btn btn-primary" class="regFormButton" data-toggle="modal" data-target="#ootdRegModal" data-what="hello">글쓰기버튼</button>
 
 
-        <!-- 모달팝업 -->
+         모달팝업 
         <div class="modal fade" id="ootdRegModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -95,7 +95,7 @@
 
 
     </div>
-
+-->
 
 
     <footer>
