--- a/index/index.html
+++ b/index/index.html
@@ -33,7 +33,7 @@
 
 <body bgcolor="#f5f5f5">
 
-
+    
 
     <header>
         <img src="image/logo/mwlogo.png" width="119px" class="logoimage">
@@ -90,8 +90,7 @@
             
             </div>
         </form>
-         <button type="button" class="btn btn-primary" class="regFormButton" data-toggle="modal" data-target="#ootdRegModal" data-what="hello">글쓰기버튼</button>
-
+     <button type="button" class="regFormButton" data-toggle="modal" data-target="#ootdRegModal" data-what="hello"><img src="image/icon/home.png"></button>
 
          모달팝업 
         <div class="modal fade" id="ootdRegModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
