--- a/index/index.html
+++ b/index/index.html
@@ -12,7 +12,6 @@
 
     <!--CSS 불러오기-->
     <link rel="stylesheet" href="default.css">
-
     <!--자바스크립트 불러오기-->
     <script src="ootd.js"></script>
 
@@ -42,9 +41,9 @@
     <div class="content" id="content" name="content">
 
 
-
-        <!--html생성시작-->
+  <!--html생성시작-->
         <div class="postviewarea" id="postviewarea" name="postviewarea">
+    
             <table class="ootdpostviewtable"  width="100%">
                 <thead>
                     <tr>
@@ -53,7 +52,8 @@
                      
                         <td></td>
                         <td></td>
-                        <td colspan="2" class="ootdbmk"><img src="/image/icon/bookmarkon.png" width="30"></td>
+                        <td colspan="2" class="ootdbmk"><img src="/image/icon/usefulbutton.png" onclick="itemClick(event);" id="ootdusefulbotton">
+                    </td>
                     </tr>
                 </thead>
                 <tbody>
@@ -96,8 +96,6 @@
 
 
         </div>
-
-
 
 
 
