--- a/index/test.html
+++ b/index/test.html
@@ -1,12 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="">
+
 <head>
-<meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>+WEATHER WEAR+</title>
 
-<title>+WEATHER WEAR+</title>
 
 
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--CSS 불러오기-->
+    <link rel="stylesheet" href="default.css">
+    <!--자바스크립트 불러오기-->
+    <script src="test.js"></script>
 
     <!--제이쿼리 라이브러리 로드-->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
@@ -19,52 +26,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" width="100"> </script>
-    <!--CSS 불러오기-->
-    <link rel="stylesheet" href="default.css">
-
-    <!--자바스크립트 불러오기-->
-    <script src="ootd.js"></script>
-
-
 
 
 </head>
 
-<body bgcolor="#f5f5f5" class="modal-open">
-
-	
-    
-    <header>
-		<img src="image/logo/mwlogo.png" width="119px" class="logoimage">
-	</header>
-
-	<div class="content" id="content" name="content"><h1>리스트출력 페이지</h1><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ootdRegModal" data-what="hello">글쓰기버튼</button><div class="modal fade in" id="ootdRegModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="false" style="display: block;"><div class="modal-backdrop fade in" style="height: 969px;"></div><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header"><h5 class="modal-title" id="exampleModalLabel">WEATHER WEAR - OOTD</h5><div class="modal-body"><form><div class="form-group"> <label for="recipient-name" class="col-form-label">TODAY OOTD</label> <input type="file" id="ootd=photo"></div><div class="form-group"><input type="text" id="ootd_text" name="ootd_text"> </div><div class="form-group"><div class="ootd_hs"><div class="ootd_hashtag" id="ootd_hashtag1">여성스러운</div><div class="ootd_hashtag" id="ootd_hashtag2">귀여운</div><div class="ootd_hashtag" id="ootd_hashtag3">보이쉬한</div><div class="ootd_hashtag" id="ootd_hashtag4">걸크러쉬</div><div class="ootd_hashtag" id="ootd_hashtag5">캐주얼</div><div class="ootd_hashtag" id="ootd_hashtag6">격식있는</div><div class="ootd_hashtag" id="ootd_hashtag7">스트릿</div><div class="ootd_hashtag" id="ootd_hashtag8">섹시한</div><div class="ootd_hashtag" id="ootd_hashtag9">베이직한</div></div></div></form></div><div class="modal-footer"> <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button> <button type="button" class="btn btn-primary" id="close_modal">등록</button> </div></div></div></div></div></div>
-	
-	
-	
-	
-	
-    <footer>
-
-		<table border="0" class="footer_menu_table">
-			<tbody><tr>
-				<td><img src="image/icon/home2.png" width="30" class="menuicons"></td>
-				<td><img src="image/icon/ootd.png" width="30" class="menuicons" onclick="ootdMain()">
-				</td>
-				<td><img src="image/icon/closet.png" width="23" class="menuicons"></td>
-				<td><img src="image/icon/market.png" width="30" class="menuicons"></td>
-				<td><img src="image/icon/mypage2.png" width="23" class="menuicons"></td>
-			</tr>
-			<tr>
-				<td>HOME</td>
-				<td><a href="/ootd/list">OOTD</a></td>
-				<td>CLOSET</td>
-				<td>MARKET</td>
-				<td>MY</td>
-			</tr>
-		</tbody></table>
-
-	</footer>
+<body bgcolor="#f5f5f5">
 
 
-<script>$(document).ready(function () {    $("#close_modal").click(function () {        $("#ootdRegModal").modal("hide");    });});</script></body></html>
+
+    <form><input type="file" id="ootdphoto" name="ootdphoto"></form>
+    <div class="preview" id="preview" name="preview"></div>
+    <button onclick="kakaoCall()">누르기</button>
+
+
+
+</body>
+</html>
