--- a/index/test.html
+++ b/index/test.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="default.css">
     <!--자바스크립트 불러오기-->
     <script src="test.js"></script>
+    <script src="default.css"></script>
 
     <!--제이쿼리 라이브러리 로드-->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
@@ -32,13 +33,85 @@
 
 <body bgcolor="#f5f5f5">
 
-
-
-    <form><input type="file" id="ootdphoto" name="ootdphoto"></form>
-    <div class="preview" id="preview" name="preview"></div>
-    <button onclick="kakaoCall()">누르기</button>
+    <div id="container">
 
 
 
-</body>
-</html>
+
+        <header>
+            <img src="image/logo/mwlogo.png" width="119px" class="logoimage">
+            <input type="hidden" value="1" name="memidxsession" id="memidxsession">
+        </header>
+        <div class="filebox">
+  <label for="ex_file">업로드</label>
+  <input type="file" id="ex_file">
+</div>
+
+
+        <div class="content" id="content" name="content"><button type="button" class="test" onclick="pageView(pageNum)">ㅇㅇ</button><button type="button" class="regFormButton" data-toggle="modal" data-target="#ootdRegModal" data-what="hello"></button>
+            <div class="modal fade in" id="ootdRegModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="false" style="display: block; padding-right: 0px;">
+                <div class="modal-backdrop fade in" style="height: 666px;"></div>
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">WEATHER WEAR - OOTD</h5>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="form-group"><label for="recipient-name" class="col-form-label">TODAY OOTD</label><br><label class="img-upload-label"><input type="file" class="ootdphoto img-upload" accept="image/jpeg,image/png,image/gif" id="ootdphoto" name="ootdphoto"></label></div>
+                                </form>
+                                <div class="form-group"><input type="text" id="ootdtext" name="ootdtext" required=""> </div>
+                                <div class="form-group">
+                                    <div class="ootd_hs">
+                                        <div class="ootd_hashtag" onclick="hashtag(1)" id="ootd_hashtag1">걸크러쉬</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(2)" id="ootd_hashtag2">격식있는</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(3)" id="ootd_hashtag3">귀여운</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(4)" id="ootd_hashtag4">베이직한</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(5)" id="ootd_hashtag5">보이쉬한</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(6)" id="ootd_hashtag6">섹시한</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(7)" id="ootd_hashtag7">스트릿</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(8)" id="ootd_hashtag8">여성스러운</div>
+                                        <div class="ootd_hashtag" onclick="hashtag(9)" id="ootd_hashtag9">캐주얼</div><input type="hidden" id="memidx" value="1"><input type="hidden" id="ootdnic" value="메이웨더TEST">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button><button type="button" class="btn btn-primary" id="close_modal" onclick="reg(); this.onclick=null;">등록</button><button type="button" class="btn btn-primary" id="imagedetection" onclick="kakaoCall()">사진조회</button>
+                                <div name="preview" id="preview"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><canvas class="js-editorcanvas" style="display: none" width="372" height="600"></canvas><canvas class="js-previewcanvas" style="display: none" width="128" height="128"></canvas>
+            
+            <div class="bottomArea"><img src="/ootd/image/background.PNG" width="90"></div>
+        </div>
+
+
+
+
+
+        <footer>
+
+            <table border="0" class="footer_menu_table">
+                <tbody>
+                    <tr>
+                        <td><img src="image/icon/home2.png" width="30" class="menuicons"></td>
+                        <td><img src="image/icon/ootd.png" width="30" class="menuicons" onclick="ootdMain()">
+                        </td>
+                        <td><img src="image/icon/closet.png" width="23" class="menuicons"></td>
+                        <td><img src="image/icon/market.png" width="30" class="menuicons"></td>
+                        <td><img src="image/icon/mypage2.png" width="23" class="menuicons"></td>
+                    </tr>
+                    <tr>
+                        <td>HOME</td>
+                        <td><a href="/ootd/list">OOTD</a></td>
+                        <td>CLOSET</td>
+                        <td>MARKET</td>
+                        <td>MY</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </footer>
+    </div>
+
+</body></html>
