--- a/index/jeongeu.html
+++ b/index/jeongeu.html
@@ -1,25 +1,141 @@
-
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>+WEATHER WEAR+</title>
+
+
+
+
+
+    <!--CSS 불러오기-->
+    <link rel="stylesheet" href="default.css">
+    <!--자바스크립트 불러오기-->
+    <script src="ootd.js"></script>
+
+    <!--제이쿼리 라이브러리 로드-->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
+
+
+    <!-- 합쳐지고 최소화된 최신 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- 부가적인 테마 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" width="100"> </script>
+
+
 </head>
-<link rel="stylesheet" href="jeongeun.css">
 
-<body>
+<body bgcolor="#f5f5f5">
 
-    <content>
-        <div class="frame">
-            <div class="innerframe">
-                <div class="one">일번어쩌구</div>
-                <div class="two"><button>시간대별</button></div>
 
-                <div class="weather">오늘의날씨 </div>
 
-            </div>
+    <header>
+        <img src="image/logo/mwlogo.png" width="119px" class="logoimage">
+    </header>
+
+    <div class="content" id="content" name="content">
+
+
+        <!--html생성시작-->
+        <div class="postviewarea" id="postviewarea" name="postviewarea">
+
+
+
+            <form>
+                <div class="ootdlistarea">
+                    <div class="ootdlistline">
+
+                        <div onclick="viewPost(' + data[i].ootdidx + ',' + $('#memidxsession').val() + '); this.onclick=null;">
+                            
+                                <div class="ootdthumnail"></div>
+                              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWJtq16okJTDn3FA37IOkdkOafG3QdEXeXYg&usqp=CAU" class="postthumnail">
+                                <div>
+                            <table class="ootdposttable">
+                                <tr>
+                                    <td>
+                                        <a1 class="ootdwriter">닉넴</a1>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a1 class="ootdlocation">지역</a1>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a1 class="ootdlistlike">조아요</a1>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+
+
+                    </div>
+                </div>
+                </div>
+            </form>
+
+
+
         </div>
-    </content>
+
+
+
+
+
+
+
+
+        <div class="bottomArea"><img src="/image/background.PNG" width="90"></div>
+    </div>
+
+
+    <footer>
+
+
+
+
+
+
+
+
+
+
+        <table border="0" class="footer_menu_table">
+            <tr>
+                <td><img src="image/icon/home2.png" width="30" class="menuicons">
+                </td>
+                <td><img src="image/icon/ootd.png" width="30" class="menuicons" onclick="ootdMain()">
+                </td>
+                <td><img src="image/icon/closet.png" width="23" class="menuicons">
+                </td>
+                <td><img src="image/icon/market.png" width="30" class="menuicons">
+                </td>
+                <td><img src="image/icon/mypage2.png" width="23" class="menuicons">
+                </td>
+            </tr>
+            <tr>
+                <td>HOME
+                </td>
+                <td>OOTD
+                </td>
+                <td>CLOSET
+                </td>
+                <td>MARKET
+                </td>
+                <td>MY
+                </td>
+            </tr>
+        </table>
+
+    </footer>
+
+
+
 
 </body></html>
