댓글창 작업중 index2

--- a/index/index2.html
+++ b/index/index2.html
@@ -53,17 +53,32 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">COMMENT </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true"><font color=black>&times;</font></span>
-                        </button>
+                        <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><img src="image/icon/heart.png"></span>
+                        </button>-->
                     </div>
                     <div class="modal-body">
-                        ...
+                        <div class="ootdcomment">
+                            <div style="width: 40px; height: 40px; background-size: contain; background-image: url(https://bitterbetter.kr/web/product/big/201902/2e83f4014460bab0a9cf24404440231d.jpg)"></div>
+                            <table border="1">
+                                <tr>
+                                    <td>
+                                    </td>                                    
+                                    <td>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        여기에 댓글 입력할 것
+          <!--              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Save changes</button>
-                        <button type="button" class="btn btn-primary" id="close_modal">다른 방식으로 모달 닫기</button>
+                        <button type="button" class="btn btn-primary" id="close_modal">다른 방식으로 모달 닫기</button>-->
                     </div>
                 </div>
             </div>
