--- a/index/index2.html
+++ b/index/index2.html
@@ -59,31 +59,35 @@
                     </div>
                     <div class="modal-body">
                         <div class="ootdcomment">
-                            <div style="width: 40px; height: 40px; background-size: contain; background-image: url(https://bitterbetter.kr/web/product/big/201902/2e83f4014460bab0a9cf24404440231d.jpg)"></div>
-                            <table border="1">
+
+                            <table class="ootdcmttable" border="1">
+
                                 <tr>
-                                    <td>
-                                    </td>                                    
-                                    <td>
-                                    </td>
+                                    <td rowspan="2" class="ootdcmtimage"><img src="https://bitterbetter.kr/web/product/big/201902/2e83f4014460bab0a9cf24404440231d.jpg"></td>
+                                    <td>글쓴이</td>
+                                    <td>22</td>
+                                    <td>11</td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">
-                                    </td>
+                                    <td colspan="3">에헤라디야~</td>
                                 </tr>
+
                             </table>
+
+
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        여기에 댓글 입력할 것
-          <!--              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+                <div class="modal-footer">
+                    여기에 댓글 입력할 것
+                    <!--              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Save changes</button>
                         <button type="button" class="btn btn-primary" id="close_modal">다른 방식으로 모달 닫기</button>-->
-                    </div>
                 </div>
             </div>
         </div>
-        
+    </div>
+
     <!--모달끝-->
 
 
@@ -137,4 +141,6 @@
                     });
     </script>-->
 
-</body></html>
+</body>
+
+</html>
