--- a/index/index2.html
+++ b/index/index2.html
@@ -79,7 +79,8 @@
                                     <td>수정 | 삭제 </td>
                                 </tr>
                                 <tr>
-                                    <td class="ootdcmttext" colspan="3">안녕하세요 ㅎㅎ 하고싶지않구만 댓글을 이렇게 쭉 쓰면 왜 프로필이 사진이 내려가고 ㅈ랄이지??? 또 고쳐야겠네 족같아</td>
+                                    <td class="ootdcmttext" colspan="3"><input type="text" class="ootdmodifycmt">
+   <button class="ootdcmtmodibutton">수정</button></td>
                                 </tr>
 
                             </table>
@@ -130,9 +131,9 @@
                         
 
 
-                    </div>
+                    </div> 
                     <div class="modal-footer">
-                        <input type="text" class="oocdcmtinput" id="ootdcmtinput">
+                        <input type="text" class="ootdcmtinput" id="ootdcmtinput">
                         <button class="ootdcmntsubmit">등록</button>
 
                     </div>
@@ -145,8 +146,7 @@
     <!--모달끝-->
 
 
-    </div>
-
+ 
 
 
     <footer>
